# Uno

./: .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONVENTIONS  Doxyfile  INSTALL.md  LICENSE  README  README.md  UNIFICATION.md  argonot-completion.bash  cpp-expert.md  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  setup.py  uno-completion.bash  uno.cfg  uno.options  uno_ampl-completion.bash  uno_default.opt
.github/C/: CMakeLists.txt  tests_hs015.c
bindings/python/: CMakeLists.txt  Model.cpp  Options.cpp  PythonModel.cpp  RectangularMatrix.cpp  SparseVector.cpp  UnoSolver.cpp  unopy.cpp  unopy.hpp
bindings/python/classes/: PythonModel.cpp  PythonModel.hpp  PythonTypes.hpp  UnoSolverWrapper.cpp  UnoSolverWrapper.hpp
bindings/python/cpp_classes/: PythonModel.cpp  PythonModel.hpp  UnoSolver.cpp  UnoSolver.hpp  UnoSolverWrapper.cpp
bindings/python/example/: example_hs015.py
bindings/python/modules/: Model.cpp  Options.cpp  RectangularMatrix.cpp  SparseVector.cpp  SymmetricMatrix.cpp  UnoSolver.cpp  Vector.cpp
bindings/python/python_modules/: Constants.cpp  Model.cpp  PointerWrapper.cpp  PythonUserModel.cpp  UnoSolver.cpp  Vector.cpp
bindings/python/tests/: test_SparseVector.py  test_UnoOptions.py  test_UnoSolver.py
interfaces/C/example/: CMakeLists.txt  example_hs015.c
interfaces/Python/: CMakeLists.txt  README.md  pyproject.toml  scipy_interface.py  test_scipy_interface.py  unopy.cpp  unopy.hpp
interfaces/Python/cpp_classes/: PythonModel.cpp  PythonModel.hpp  PythonStreamBuffer.cpp  PythonStreamBuffer.hpp  UnoSolverWrapper.cpp  UnoSolverWrapper.hpp
interfaces/Python/example/: example_hs015.py
interfaces/Python/gemseo_uno/: gemseo_uno.py  test_gemseo_uno.py  test_gemso_uno.py
interfaces/Python/python_modules/: Constants.cpp  Model.cpp  PointerWrapper.cpp  Result.cpp  UnoSolver.cpp  Vector.cpp
interfaces/Python/scipy_interface/: scipy_uno.py  test_scipy_interface.py
interfaces/Python/scripts/: build_windows.ps1  download_bpqd.sh  download_bqpd.ps1  download_bqpd.sh  download_dependencies.ps1  download_dependencies.sh
interfaces/Python/tests/: run_wheel_tests.py
interfaces/Python/unopy/: __init__.py
src/: CMakeLists.txt  INSTALL  Makefile  Makefile.local  Uno.cpp  al.cpp  argonot.cfg  filter-al.cpp  main.cpp  uno.cfg
src/base/: Argonot.cpp  Argonot.hpp  Constraint.cpp  Constraint.hpp  HessianEvaluation.cpp  HessianEvaluation.hpp  Iterate.cpp  Iterate.hpp  Matrix.cpp  Matrix.hpp  Options.cpp  Phase.hpp  Preprocessing.cpp  Preprocessing.hpp  Problem.cpp  Problem.hpp  SparseGradient.hpp  SparseVector.hpp  Statistics.cpp  Statistics.hpp  Timer.hpp  Uno.cpp  Uno.hpp  Utils.cpp  Utils.hpp  Vector.cpp  Vector.hpp
src/base/constraint_relaxation/: ConstraintRelaxationStrategy.cpp  ConstraintRelaxationStrategy.hpp  ConstraintRelaxationStrategyFactory.cpp  ConstraintRelaxationStrategyFactory.hpp  FeasibilityRestoration.cpp  FeasibilityRestoration.hpp  l1Relaxation.cpp  l1Relaxation.hpp
src/base/feasibility/: FeasibilityRestoration.cpp  FeasibilityRestoration.hpp  FeasibilityStrategy.cpp  FeasibilityStrategy.hpp  Relaxation.cpp  Relaxation.hpp  l1Relaxation.cpp  l1Relaxation.hpp
src/base/globalization_mechanism/: GlobalizationMechanism.cpp  GlobalizationMechanism.hpp  GlobalizationMechanismFactory.cpp  GlobalizationMechanismFactory.hpp  LineSearch.cpp  LineSearch.hpp  TrustLineSearch.cpp  TrustLineSearch.hpp  TrustRegion.cpp  TrustRegion.hpp
src/base/globalization_strategy/: Filter.cpp  Filter.hpp  FilterStrategy.cpp  FilterStrategy.hpp  GlobalizationStrategy.cpp  GlobalizationStrategy.hpp  GlobalizationStrategyFactory.cpp  GlobalizationStrategyFactory.hpp  PenaltyMeritFunction.cpp  PenaltyMeritFunction.hpp  PenaltyStrategy.cpp  PenaltyStrategy.hpp  TubeStrategy.cpp  TubeStrategy.hpp  TwoPhaseStrategy.cpp  TwoPhaseStrategy.hpp
src/base/infeasibility/: InfeasibilityStrategy.cpp  InfeasibilityStrategy.hpp
src/base/local_approximation/: AugmentedLagrangian.cpp  AugmentedLagrangian.hpp  InteriorPoint.cpp  InteriorPoint.hpp  LP.hpp  LPApproximation.cpp  LPApproximation.hpp  LocalApproximation.cpp  LocalApproximation.hpp  LocalApproximationFactory.cpp  LocalApproximationFactory.hpp  LocalSolution.cpp  LocalSolution.hpp  QP.cpp  QP.hpp  QPApproximation.cpp  QPApproximation.hpp
src/base/mechanism/: BacktrackingLineSearch.cpp  BacktrackingLineSearch.hpp  GlobalizationMechanism.cpp  GlobalizationMechanism.hpp  GlobalizationMechanismFactory.cpp  GlobalizationMechanismFactory.hpp  LineSearch.cpp  (+5 more)
src/config/: ConfigurationFile.cpp  ConfigurationFile.hpp  Makefile  main.cpp  test.cfg
src/linear_algebra/: COOSymmetricMatrix.cpp  COOSymmetricMatrix.hpp  CSCSymmetricMatrix.cpp  CSCSymmetricMatrix.hpp  CSRSymmetricMatrix.cpp  CSRSymmetricMatrix.hpp  Matrix.cpp  Matrix.hpp  SparseVector.hpp  SymmetricMatrix.cpp  SymmetricMatrix.hpp  Vector.cpp  Vector.hpp
src/logger/: Logger.hpp
src/old/: Makefile
src/optimization_problem/: Iterate.hpp  Problem.cpp  Problem.hpp
src/solvers/: BQPDSolver.cpp  BQPDSolver.hpp  LPSolver.hpp  MA57Solver.cpp  MA57Solver.hpp  QPSolver.hpp  QPSolverFactory.cpp  QPSolverFactory.hpp
src/tools/: Options.hpp  Timer.cpp
src/unit_tests/: tests.cpp
uno/optimization/: BoundRelaxedModel.hpp  Constraint.cpp  Constraint.hpp  Direction.cpp  Direction.hpp  DualResiduals.hpp  ElasticFeasibilityProblem.cpp  ElasticFeasibilityProblem.hpp  ElasticReformulation.cpp  ElasticReformulation.hpp  ElasticVariables.hpp  EqualityConstrainedModel.hpp  EvaluationCache.cpp  EvaluationCache.hpp  EvaluationErrors.hpp  EvaluationSpace.hpp  Evaluations.cpp  Evaluations.hpp  HomogeneousEqualityConstrainedModel.hpp  Iterate.cpp  Iterate.hpp  IterateStatus.cpp  IterateStatus.hpp  LagrangianGradient.cpp  LagrangianGradient.hpp  Model.cpp  Model.hpp  ModelFactory.cpp  ModelFactory.hpp  Multipliers.cpp  Multipliers.hpp  OptimizationProblem.cpp  OptimizationProblem.hpp  OptimizationStatus.cpp  OptimizationStatus.hpp  Parameterization.cpp  Parameterization.hpp  Preprocessing.cpp  Preprocessing.hpp  PrimalDualResiduals.cpp  (+22 more)
(+3140 files in other folders)
